Removed debug from settings and added it in .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,5 @@ services:
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_DB=${POSTGRES_DB}
             - SECRET_KEY=${SECRET_KEY}
+            - DEBUG=${DEBUG}
 
