--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
             - "90:8000"
         volumes:
             - .:/app
-            # - ./db:/app/db
+            - ./db:/app/db
+            - ./stock/migrations:/app/stock/migrations
         environment:
             - POSTGRES_PORT=${POSTGRES_PORT}
             - POSTGRES_HOST=${POSTGRES_HOST}
