--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,7 @@ services:
             - .:/app
             - ./db:/app/db
             - ./stock/migrations:/app/stock/migrations
-        environment:
-            - POSTGRES_PORT=${POSTGRES_PORT}
-            - POSTGRES_HOST=${POSTGRES_HOST}
-            - POSTGRES_PASS=${POSTGRES_PASS}
-            - POSTGRES_USER=${POSTGRES_USER}
-            - POSTGRES_DB=${POSTGRES_DB}
-            - SECRET_KEY=${SECRET_KEY}
-            - DEBUG=${DEBUG}
+        env_file:
+            - .env
+           
 
