--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,12 @@ services:
     web:
         build: .
         ports:
-            - "90:8000"
+            - "8000:8000"
         volumes:
             - .:/app
             - ./db:/app/db
             - ./stock/migrations:/app/stock/migrations
+            - static:/app/static
         env_file:
             - .env  
 
@@ -17,7 +18,7 @@ services:
         volumes:
             - static:/app/static
         ports:
-            - "80:80"
+            - "8080:80"
         depends_on:
             - web
 volumes:
