--- a/ngnix/default.conf
+++ b/ngnix/default.conf
@@ -4,6 +4,7 @@ upstream web_stock {
 
 server {
     listen 80;
+    root /app;
 
     location / {
         proxy_pass http://web_stock;
@@ -14,7 +15,6 @@ server {
     }
 
     location /static/ {
-        alias /static/;
         access_log off;
         expires max;
     }
