--- a/ngnix/default.conf
+++ b/ngnix/default.conf
@@ -5,6 +5,7 @@ upstream web_stock {
 server {
     listen 80;
     root /app;
+    client_max_body_size 20M;
 
     location / {
         proxy_pass http://web_stock;
@@ -15,6 +16,11 @@ server {
     }
 
     location /static/ {
+        access_log off;
+        expires max;
+    }
+
+    location /media/ {
         access_log off;
         expires max;
     }
