--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
             - ./db:/app/db
             - ./stock/migrations:/app/stock/migrations
             - static_volume:/app/static
+            - media_volume:/app/media
+            - ./media:/app/media
         env_file:
             - .env  
 
@@ -17,9 +19,12 @@ services:
         build: ./ngnix
         volumes:
             - static_volume:/app/static
+            - media_volume:/app/media
+            - ./media:/app/media
         ports:
             - "80:80"
         depends_on:
             - web
 volumes:
     static_volume:
+    media_volume:
